Revision history for Perl extension Net::SSH2.

0.59_05
        - Rewrite constant generation code
        - Improve "check_hostkey" method adding support for using a
          callback as policy.
        - Rename "remote_port" to "port", "remote_hostname" to
          "hostname" and "check_remote_hostkey" to "check_hostkey".
        - Several documentation improvements.

0.59_04  Apr 13, 2016
        - Use libssh2 function "libssh2_scp_send64" when available. It
          allows sending files bigger than 4GB.
        - Improve the way the user is prompted.
        - Improve "check_remote_hostkey" method (WIP).
        - Add scat.pl sample script
        - Several documentation improvements.
        - Remove File::Slurp dependency in test script.

0.59_03  Apr 12, 2016
        - Fix Channel "read" method that was hanging in blocking mode.
        - Add "check_remote_hostkey" method for easy remote host key
          verification (WIP)
        - Add "die_with_error" method.
        - Several documentation improvements.

0.59_02  Apr 12, 2016
        - Fix "auth_list" method.
        - Fix handling of "lib" argument in Makefile.PL.
        - Compilation was broken for perls 5.8.0 .. 5.8.3.
        - Several documentation improvements.

0.59_01  Apr 11, 2016
        *** WARNING: this release includes lots of changes, some
            visible, most internal. Regressions are expected. Also,
            it introduces some minor backward incompatible changes -
            but in those cases, the old behavior was broken or insane
            anyway.

        - libssh2 version 1.7.0 is now recommended. The module would
          still compile against older versions, but not all its
          features will be available.
        - Makefile.PL has been refactored and improved. Now it is
          better able to find the library libssh2 and compile code
          using it.
        - Lots of XS code refactoring has been performed in order to