@@ -1,11 +1,13 @@
 Revision history for Perl extension Net::SSH2.
 
 0.59_05
-        - Rewrite constant generation code
+        - Switch the order of "policy" and "known_host_path" arguments
+          in method "check_hostkey".
         - Improve "check_hostkey" method adding support for using a
           callback as policy.
         - Rename "remote_port" to "port", "remote_hostname" to
           "hostname" and "check_remote_hostkey" to "check_hostkey".
+        - Rewrite constant generation code
         - Several documentation improvements.
 
 0.59_04  Apr 13, 2016
